# zhkh

./: docker-compose.yml
zhkh_backend/: .flake8  .gitignore  .isort.cfg  Dockerfile  Makefile  alembic.ini  docker-compose.yml  entrypoint.sh  house_data.json  main.py  pyproject.toml
zhkh_backend/app/: app.py  config.py  injectors.py
zhkh_backend/app/application/audit_log/commands/: create_audit_log_command.py
zhkh_backend/app/application/common/interfaces/: base.py  (+9 more)
zhkh_backend/app/domain/: dependency_injector.py
zhkh_backend/app/domain/services/: token_service.py
zhkh_backend/app/infrastructure/: base_application.py  ceph.py  dependency_injector.py  postgres.py  redis.py  session_manger.py
zhkh_backend/app/infrastructure/containers/: di_container.py  utils.py  validator_container.py
zhkh_backend/app/infrastructure/injectors/: dependency_injector.py  mediator_injector.py
zhkh_backend/app/infrastructure/mediator/: mediator.py  pipline_context.py
zhkh_backend/app/infrastructure/migrations/: env.py
zhkh_backend/app/infrastructure/orm/: meta.py
zhkh_backend/app/infrastructure/persistence/: audit_log_repository.py  base.py  company_repository.py  file_repository.py  house_repository.py  reference_book_repository.py  reference_book_value_repository.py  user_repository.py
zhkh_backend/app/presentation/api/: __init__.py
zhkh_backend/app/presentation/templates/: detailInformation.html  tableInformation.html
zhkh_backend/config/: settings.yml
zhkh_backend/seeds/: fill.py  fill_admin.py  fill_default_company.py  fill_houses.py  fill_reference_books.py
(+433 files in other folders)
